tests/baselines/reference/dependentDestructuredVariablesRefereinceInDeclaration1.errors.txt
dependentDestructuredVariablesRefereinceInDeclaration1.ts(4,9): error TS2322: Type '{ c: number; f: any; }' is not assignable to type 'string | number'.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(4,11): error TS2339: Property 'c' does not exist on type 'string | number'.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(4,14): error TS2339: Property 'f' does not exist on type 'string | number'.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(4,14): error TS7022: 'f' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(4,45): error TS2448: Block-scoped variable 'f' used before its declaration.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(9,9): error TS2322: Type '{ c: number; f: () => any; }' is not assignable to type 'string | number'.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(9,11): error TS2339: Property 'c' does not exist on type 'string | number'.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(9,14): error TS2339: Property 'f' does not exist on type 'string | number'.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(14,9): error TS2322: Type '{ c: number; f: number; g: number; }' is not assignable to type 'string | number'.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(14,11): error TS2339: Property 'c' does not exist on type 'string | number'.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(14,14): error TS2339: Property 'f' does not exist on type 'string | number'.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(14,17): error TS2339: Property 'g' does not exist on type 'string | number'.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(20,14): error TS7022: 'f' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
dependentDestructuredVariablesRefereinceInDeclaration1.ts(20,71): error TS2448: Block-scoped variable 'f' used before its declaration.


==== dependentDestructuredVariablesRefereinceInDeclaration1.ts (14 errors) ====
    // https://github.com/microsoft/TypeScript/issues/62993
    
    {
      const { c, f }: string | number = { c: 0, f };
            ~~~~~~~~
!!! error TS2322: Type '{ c: number; f: any; }' is not assignable to type 'string | number'.
              ~
!!! error TS2339: Property 'c' does not exist on type 'string | number'.
                 ~
!!! error TS2339: Property 'f' does not exist on type 'string | number'.
                 ~
!!! error TS7022: 'f' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                                                ~
!!! error TS2448: Block-scoped variable 'f' used before its declaration.
!!! related TS2728 dependentDestructuredVariablesRefereinceInDeclaration1.ts:4:14: 'f' is declared here.
      f;
    }
    
    {
      const { c, f }: string | number = { c: 0, f: () => f };
            ~~~~~~~~
!!! error TS2322: Type '{ c: number; f: () => any; }' is not assignable to type 'string | number'.
              ~
!!! error TS2339: Property 'c' does not exist on type 'string | number'.
                 ~
!!! error TS2339: Property 'f' does not exist on type 'string | number'.
      f;
    }
    
    {
      const { c, f, g = f }: string | number = { c: 0, f: 0, g: 0 };
            ~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ c: number; f: number; g: number; }' is not assignable to type 'string | number'.
              ~
!!! error TS2339: Property 'c' does not exist on type 'string | number'.
                 ~
!!! error TS2339: Property 'f' does not exist on type 'string | number'.
                    ~
!!! error TS2339: Property 'g' does not exist on type 'string | number'.
      f;
      g;
    }
    
    {
      const { c, f }: { c: 0; f: number } | { c: 1; f: string } = { c: 0, f };
                 ~
!!! error TS7022: 'f' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                                                                          ~
!!! error TS2448: Block-scoped variable 'f' used before its declaration.
!!! related TS2728 dependentDestructuredVariablesRefereinceInDeclaration1.ts:20:14: 'f' is declared here.
      f;
    }
    
    {
      const { c, f }: { c: 0; f: () => unknown } | { c: 1; f: string } = {
        c: 0,
        f: () => f,
      };
      f;
    }
    
    {
      const {
        c,
        f,
        g = f,
      }:
        | { c: 0; f: bigint; g?: bigint | number }
        | { c: 1; f: number; g: string } = {
        c: 0,
        f: 10n,
      };
      f;
      g;
    }
    